portfolio first commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/tail-output.css">
+    <style>
+        body, html {
+            height: 100%;
+        }
+        .parallax {
+        /* The image used */
+        background: linear-gradient(270deg, transparent 1% 10%, rgb(10, 1, 38, 1)), url("assets/images/img1.jpg");
+        /* Full height */
+        height: 100%;
+        /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        }
+    </style>
+</head>
+<body>
+    <div class="parallax">
+        <div class=" flex flex-wrap container">
+            <div class="h-full p-4 lg:w-2/4">
+                <div class="p-4 pt-[40%]">
+                    <span class="text-white text-2xl" style="font-family:monospace">Hi, I am</span>
+                    <h1 class="text-5xl text-white font-bold mb-3">Ayotunde Okunubi</h1>
+                    <p class="text-white text-2xl" style="font-family:monospace">Freelance Web Developer from Nigeria</p>
+                    <!--
+                        <hr>
+                    -->
+                    <button class="bg-blue-300 mt-3 p-4 text-blue-700 font-bold rounded-lg text-lg" style="font-family:monospace">Know More</button>
+                </div>
+            </div>
+            <div class="h-full p-4 lg:w-2/4">
+
+            </div>
+            
+        </div>
+    </div>
+    <div class="mt-3 p-3">
+
+    </div>
+</body>
+</html>
