--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
         <h1 class = "text-4xl font-bold text-center text-white">Experiences</h1>
         <div class="px-5 py-3">
 
+            <style>
+                span.cd-timeline__date{
+                    color:white !important;
+                }
+            </style>
+
             <!--timeline css/js library-->
 
             <section class="cd-timeline js-cd-timeline" style="background-color: transparent;">
@@ -192,7 +198,7 @@
                       <p class="color-contrast-medium">Web Design and Development for Ijebu Anglican Diocese, Administration of website and social media channels.</p>
             
                       <div class="flex justify-between items-center">
-                        <span class="cd-timeline__date">Feb 26</span>
+                        <span class="cd-timeline__date">Sept, 2020</span>
                       </div>
                     </div> <!-- cd-timeline__content -->
                   </div> <!-- cd-timeline__block -->
