--- a/index.html
+++ b/index.html
@@ -215,17 +215,17 @@
     <div class="mt-[10%] p-3 px-5">
         <h1 class = "text-4xl font-bold text-center text-white" style="margin-bottom: 5%;">Get In Touch</h1>
         <div class="md:flex justify-center gap-3">
-            <div class="p-3 px-10 bg-blue-300 cursor-pointer mb-3" onclick = "window.location='https://www.twitter.com'">
+            <div class="p-3 px-10 bg-blue-300 cursor-pointer mb-3" onclick = "window.location='https://twitter.com/zeyphrOne'">
                 <div class = "md:w-24 text-white text-center">
                     <h4>Twitter</h4>
                 </div>
             </div>
-            <div class="p-3 px-10 bg-green-500 cursor-pointer mb-3" onclick = "window.location='https://www.whatsapp.com'">
+            <div class="p-3 px-10 bg-green-500 cursor-pointer mb-3" onclick = "window.location='https://wa.me/+2348083673149'">
                 <div class = "md:w-24 text-white text-center">
                     <h4>Whatsapp</h4>
                 </div>
             </div>
-            <div class="p-3 px-10 bg-blue-500 cursor-pointer mb-3" onclick = "window.location='https://www.linkedin.com'">
+            <div class="p-3 px-10 bg-blue-500 cursor-pointer mb-3" onclick = "window.location='https://www.linkedin.com/in/ayotunde-okunubi-4a76ab25b/'">
                 <div class = "md:w-24 text-white text-center">
                     <h4>LinkedIn</h4>
                 </div>
