--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
 
             <section class="cd-timeline js-cd-timeline" style="background-color: transparent;">
                 <div class="container max-width-lg cd-timeline__container" style="background:transparent;">
+                    <!--
                   <div class="cd-timeline__block">
                     <div class="cd-timeline__img cd-timeline__img--picture">
                       <img src="assets/timeline/assets/img/cd-icon-picture.svg" alt="Picture">
-                    </div> <!-- cd-timeline__img -->
+                    </div>
             
                     <div class="cd-timeline__content text-component">
                       <h2>Web Developer, Daddyclem Integrated Services</h2>
@@ -136,8 +137,9 @@
                         <span class="cd-timeline__date">Jan 2023</span>
                         <a href="https://daddyclem-ltd.com" class="btn btn--subtle">View Project</a>
                       </div>
-                    </div> <!-- cd-timeline__content -->
-                  </div> <!-- cd-timeline__block -->
+                    </div>
+                  </div> 
+                    -->
             
                   <div class="cd-timeline__block">
                     <div class="cd-timeline__img cd-timeline__img--movie">
