--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             
                     <div class="cd-timeline__content text-component">
                       <h2>Web Developer, City of David Mount of Zion</h2>
-                      <p class="color-contrast-medium">Freelance Wordpress Web Developer at City of David Mount of Zion Church, Maryland USA. Responsible for building website</p>
+                      <p class="color-contrast-medium">Freelance WordPress Web Developer at City of David Mount of Zion Church, Maryland USA. Responsible for building website</p>
             
                       <div class="flex justify-between items-center">
-                        <span class="cd-timeline__date">Jan 2023</span>
+                        <span class="cd-timeline__date">March, 2024</span>
                         <a href="https://cityofdavidmountofzion.org" class="btn btn--subtle">View Project</a>
                       </div>
                     </div>
